<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_border"
    android:paddingHorizontal="32dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="end"
        android:text="@string/author"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_border"
        android:paddingHorizontal="12dp"
        android:paddingVertical="5dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/M1_0"
            android:textColor="@color/screen_2nd_text" />

        <TextView
            android:id="@+id/tv_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_M"
            android:layout_alignParentEnd="true"
            android:textColor="@color/screen_text"
            android:textSize="47sp" />
        <View
            android:id="@+id/horizontal_only"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_calc"
            android:background="#c0c0c0"
            />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/horizontal_only"
            android:layout_alignParentEnd="true"
            android:textColor="@color/screen_2nd_text" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp">

        <TextView
            android:id="@+id/tv_MC"
            style="@style/Button.M"
            android:text="@string/MC" />
        <TextView
            android:id="@+id/tv_MR"
            style="@style/Button.M"
            android:text="@string/MR" />
        <TextView
            android:id="@+id/tv_Mminus"
            style="@style/Button.M"
            android:text="@string/Mminus" />
        <TextView
            android:id="@+id/tv_Mplus"
            style="@style/Button.M"
            android:text="@string/Mplus" />
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rowCount="4"
        android:alignmentMode="alignBounds"
        android:columnCount="5"
        >
        <Button
            android:id="@+id/btn_7"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_seven"
            />

        <Button
            android:id="@+id/btn_8"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_eight"
            />

        <Button
            android:id="@+id/btn_9"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_nine"
            />
        <Button
            android:id="@+id/btn_neg"
            style="@style/Button.Sup"
            android:textSize="29sp"
            android:text="@string/negative"
            />
        <Button
            android:id="@+id/btn_back"
            style="@style/Button.Sup"
            android:onClick="btnBackSpaceOnClick"
            android:text="@string/backspace"
            />
        <Button
            android:id="@+id/btn_4"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_four"
            />
        <Button
            android:id="@+id/btn_5"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_five"
            />
        <Button
            android:id="@+id/btn_6"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_six"
            />
        <Button
            android:id="@+id/btn_mul"
            style="@style/Button.Calc"
            android:onClick="btnMathOnClick"
            android:text="@string/multiply"
            />
        <Button
            android:id="@+id/btn_div"
            style="@style/Button.Calc"
            android:onClick="btnMathOnClick"
            android:text="@string/div"
            />
        <Button
            android:id="@+id/btn_1"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_one"
            />
        <Button
            android:id="@+id/btn_2"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_two"
            />
        <Button
            android:id="@+id/btn_3"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_three"
            />
        <Button
            android:id="@+id/btn_sub"
            android:onClick="btnMathOnClick"
            style="@style/Button.Calc"
            android:text="@string/sub"
            />
        <Button
            android:id="@+id/btn_equal"
            style="@style/Button.Equal"
            android:text="@string/equal"
            android:onClick="btnEqualOnClick"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:layout_rowSpan="2"
            />
        <Button
            android:id="@+id/btn_Clear"
            style="@style/Button.Clear"
            android:onClick="btnClearOnClick"
            android:text="@string/clear"
            />
        <Button
            android:id="@+id/btn_0"
            style="@style/Button.Number"
            android:onClick="btnNumberOnClick"
            android:text="@string/numb_zero"
            />
        <Button
            android:id="@+id/btn_dot"
            style="@style/Button.Number"
            android:onClick="btnDotOnClick"
            android:text="@string/dot"
            />
        <Button
            android:id="@+id/btn_add"
            android:onClick="btnMathOnClick"
            style="@style/Button.Calc"
            android:text="@string/add"
            />
    </GridLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Decimal places - F (change)"
        android:textColor="@color/M_color"
        />
</LinearLayout>